[gd_scene load_steps=7 format=3 uid="uid://bqtg1c4s2pkab"]

[ext_resource type="Script" path="res://DragObject.gd" id="1_fk6ir"]
[ext_resource type="Texture2D" uid="uid://cagtqr073bxj2" path="res://assets/spider.png" id="2_87e2g"]
[ext_resource type="Script" path="res://allowed_snake_area.gd" id="3_i8vs8"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m8jht"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4bimj"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2xjkc"]
size = Vector2(10, 10)

[node name="spiderBod" type="StaticBody2D" groups=["draggable", "spider"]]
collision_layer = 3
collision_mask = 3
script = ExtResource("1_fk6ir")

[node name="Spider" type="Sprite2D" parent="."]
position = Vector2(-0.5, 0)
scale = Vector2(0.9, 0.9)
texture = ExtResource("2_87e2g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_m8jht")

[node name="squirrel" type="Area2D" parent="."]
collision_layer = 3
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="squirrel"]
shape = SubResource("RectangleShape2D_4bimj")

[node name="left_dropzone" type="StaticBody2D" parent="." groups=["dropable", "side_dropzone"]]
position = Vector2(-10, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_i8vs8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_dropzone"]
shape = SubResource("RectangleShape2D_2xjkc")

[node name="ColorRect" type="ColorRect" parent="left_dropzone"]
z_index = -1
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
metadata/_edit_use_anchors_ = true

[node name="right_dropzone" type="StaticBody2D" parent="." groups=["dropable", "side_dropzone"]]
position = Vector2(10, 0)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_i8vs8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_dropzone"]
shape = SubResource("RectangleShape2D_2xjkc")

[node name="ColorRect" type="ColorRect" parent="right_dropzone"]
z_index = -1
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
metadata/_edit_use_anchors_ = true

[node name="top_dropzone" type="StaticBody2D" parent="." groups=["dropable", "top_dropzone"]]
position = Vector2(0, -10)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_i8vs8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="top_dropzone"]
shape = SubResource("RectangleShape2D_2xjkc")

[node name="ColorRect" type="ColorRect" parent="top_dropzone"]
z_index = -1
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
metadata/_edit_use_anchors_ = true

[node name="bottom_dropzone" type="StaticBody2D" parent="." groups=["bottom_dropzone", "dropable"]]
position = Vector2(0, 10)
collision_layer = 2
collision_mask = 2
script = ExtResource("3_i8vs8")

[node name="CollisionShape2D" type="CollisionShape2D" parent="bottom_dropzone"]
shape = SubResource("RectangleShape2D_2xjkc")

[node name="ColorRect" type="ColorRect" parent="bottom_dropzone"]
z_index = -1
offset_left = -5.0
offset_top = -5.0
offset_right = 5.0
offset_bottom = 5.0
metadata/_edit_use_anchors_ = true

[connection signal="body_entered" from="squirrel" to="." method="_on_squirrel_body_entered" flags=18]
[connection signal="body_exited" from="squirrel" to="." method="_on_squirrel_body_exited" flags=18]
[connection signal="mouse_entered" from="squirrel" to="." method="_on_squirrel_mouse_entered" flags=18]
[connection signal="mouse_exited" from="squirrel" to="." method="_on_squirrel_mouse_exited" flags=18]
